구구단 퀴즈: onChange() - html 태그 안에 있던 script 를 메소드로 분리

--- a/lecture/gugu.html
+++ b/lecture/gugu.html
@@ -38,13 +38,17 @@
                     }
                 };
 
+                onChange = (e) => {
+                    this.setState({ value: e.target.value });
+                };
+
                 // 그리기
                 render() {
                     return (
                         <div>
                             <div>{this.state.first} * {this.state.second} = ?</div>
                             <form onSubmit={this.onSubmit}>
-                                <input type="number" vaule={this.state.value} onChange={ (e) => this.setState({ value: e.target.value }) } />
+                                <input type="number" vaule={this.state.value} onChange={ this.onChange } />
                                 <button>입력</button>
                             </form>
                             <div>{this.state.result}</div>
