구구단 퀴즈(오타 수정)

--- a/lecture/gugu.html
+++ b/lecture/gugu.html
@@ -48,7 +48,7 @@
                         <div>
                             <div>{this.state.first} * {this.state.second} = ?</div>
                             <form onSubmit={this.onSubmit}>
-                                <input type="number" vaule={this.state.value} onChange={ this.onChange } />
+                                <input type="number" value={this.state.value} onChange={ this.onChange } />
                                 <button>입력</button>
                             </form>
                             <div>{this.state.result}</div>
